--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-script": ">= 1.x.x",
     "jade": ">= 0.25.0",
     "wrench": ">= 1.3.8",
-    "node-markdown": ">= 0.1.0"
+    "node-markdown": ">= 0.1.0",
+    "rss" : ">= 0.0.3"
   }
 }
